# SilkSharp

./: .gitignore  README.md  SilkSharp.sln
.github/workflows/: lib.yml  livebuild.yml  osx.yml  release.yml
SilkSharp/: BaseCodec.cs  Codec.cs  Decoder.cs  Encoder.cs  Enum.cs  NativeCodec.cs  SilkSharp.csproj
SilkSharp.Demo/: Program.cs  SilkSharp.Demo.csproj
SilkSharp.NAudio/: S16LEAudioExtension.cs  SilkAudioExtension.cs  SilkSharp.NAudio.csproj
SilkSharp.SilkPlayer/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  SilkSharp.SilkPlayer.csproj  app.manifest
SilkSharp.Test/: SilkSharp.Test.csproj  UnitTest1.cs
SilkSharp.Test/assets/: free.silk  push.pcm
SilkSharp/Audio/: BaseAudio.cs  S16LEAudio.cs  SilkAudio.cs
SilkSharp/Codec/: BaseCodec.cs  SilkDecoder.cs  SilkEncoder.cs
SilkSharp/Exception/: SilkDecoderException.cs  SilkEncoderException.cs  SilkMemFreeException.cs
nuget/: NAudio.nuspec  SilkSharp.nuspec
silkcodec/: CMakeLists.txt  silkcodec.c  silkcodec.h
